styling: Fix heading line height
This avoids overlapping characters when headings are long enough to wrap

--- a/uubloomington/uubloomington/static/css/uubloomington.css
+++ b/uubloomington/uubloomington/static/css/uubloomington.css
@@ -103,7 +103,7 @@ h4,
 h5,
 h6,
 .site-title > * {
-    line-height: initial;
+    line-height: 1.1;
 }
 
 h1 {
